syntax = "proto3";
package zrchain.zentp;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "zrchain/zentp/params.proto";

option go_package = "github.com/Zenrock-Foundation/zrchain/v5/x/zentp/types";


// Current status of an mint/burn.
enum MBStatus {
  // Mint or Burn is pending
  MB_STATUS_PENDING = 0;

  // Mint or Burn is completed
  MB_STATUS_COMPLETED= 1;
}
message Mint {
  uint64 id = 1;
  string workspace_addr = 2;
  uint64 source_key_id = 3;
  string destination_chain = 4;
  uint64 amount = 5;
  uint64 recipient_key_id = 6;
  string tx_hash = 7;
  MBStatus state = 8;
}

message Burn {
  uint64 id = 1;
  string workspace_addr = 2;
  uint64 source_key_id = 3;
  string source_chain = 4;
  uint64 amount = 5;
  uint64 recipient_key_id = 6;
  string tx_hash = 7;
  MBStatus state = 8;
}