syntax = "proto3";

package api;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/Zenrock-Foundation/zrchain/v5/sidecar/proto/api";

service SidecarService {
  rpc GetSidecarState(SidecarStateRequest) returns (SidecarStateResponse) {}
  rpc GetSidecarStateByEthHeight(SidecarStateByEthHeightRequest) returns (SidecarStateResponse) {}
  rpc GetBitcoinBlockHeaderByHeight(BitcoinBlockHeaderByHeightRequest) returns (BitcoinBlockHeaderResponse) {}
  rpc GetLatestBitcoinBlockHeader(LatestBitcoinBlockHeaderRequest) returns (BitcoinBlockHeaderResponse) {}
  rpc GetLatestEthereumNonceForAccount(LatestEthereumNonceForAccountRequest) returns (LatestEthereumNonceForAccountResponse) {}
}

message LatestBitcoinBlockHeaderRequest {
  string ChainName = 1;
}

message BitcoinBlockHeaderByHeightRequest {
  int64 BlockHeight = 1;
  string ChainName = 2;
}

message BitcoinBlockHeaderResponse {
  BTCBlockHeader blockHeader = 1;
  int64 BlockHeight = 2;
  int64 TipHeight = 3;
}

message BTCBlockHeader {
  int64 Version = 1;
  string PrevBlock = 2;
  string MerkleRoot = 3;
  int64 TimeStamp = 4;
  int64 Bits = 5;
  int64 Nonce = 6;
  string BlockHash = 7;
}

message Redemption {
  bytes BtcAddress = 1;
  uint64 Amount = 2;
}

message SidecarStateRequest {}

message SidecarStateResponse {
  bytes Delegations = 1;
  string ROCKUSDPrice = 2;
  string ETHUSDPrice = 3;
  uint64 EthBlockHeight = 4;
  string EthBlockHash = 5;
  uint64 EthGasLimit = 6;
  uint64 EthBaseFee = 7;
  uint64 EthTipCap = 8;
  repeated Redemption RedemptionsEthereum = 9 [(gogoproto.nullable) = false];
}

message SidecarStateByEthHeightRequest {
  uint64 EthBlockHeight = 1;
}

message LatestEthereumNonceForAccountRequest {
  string Address = 1;
}

message LatestEthereumNonceForAccountResponse {
  uint64 Nonce = 1;
}
